--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   <link rel="manifest" href="/manifest.json" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Raise funds for your business/ startup through various grants and schemes. Book a free consulation call to get started." />
+  <title>Know the best Grants and Schemes for your business idea/ startup.</title>
+  <meta name="theme-color" content="#646cff" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="A React application built with Vite and Tailwind CSS" />
   <meta name="theme-color" content="#646cff" />
   <meta name="robots" content="index, follow" />
